# erquren_kokoro

./: .gitignore  EXPORT_TUTORIAL.md  README.md  RKNN_CONVERSION_REPORT.md  benchmark_rknn_quantization.py  convert_rknn.py  kokoro_onnx_run.py  requirements.txt
.github/workflows/: export_onnx_release.yml  export_rknn.yml  validate_onnx.yml
cpp/: CMakeLists.txt  README.md  build_ax630c.sh  build_ax650.sh  kokoro_srv.cpp  main.cpp
cpp/espeak-ng-data/: ja_dict  shn_dict  vi_dict
cpp/src/: Kokoro.cpp  Kokoro.h  Tokenizer.cpp  Tokenizer.h  ZHG2P.cpp
